--- a/views/record.ejs
+++ b/views/record.ejs
@@ -7,7 +7,7 @@
         <meta name="mobile-web-app-capable" content="yes">
         <title>记账啦！</title>
         <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-        <link rel="stylesheet" href="stylesheets/style.css">
+        <link rel="stylesheet" href="stylesheets/record-style.css">
     </head>
     <body>
         <div class="container" id="fakeContainer">
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <p class="billEnter">
-                        <a id="queryBill">个人查账入口</a>
+                        <a id="queryBill" href="/query">个人查账入口</a>
                     </p>
                     <p class="billEnter">
                         <a id="calBill">月初算账入口</a>
