--- a/views/record.ejs
+++ b/views/record.ejs
@@ -8,131 +8,133 @@
         <title>记账啦！</title>
         <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
         <link rel="stylesheet" href="stylesheets/record-style.css">
+        <link rel="stylesheet" href="stylesheets/query-style.css">
     </head>
     <body>
-        <div class="container" id="fakeContainer">
-            <h3 class="text-center">
-                <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-                Find Yourself~
-            </h3>
-            <div class="row">
-                <div class="col-xs-4">
-                    <button type="button" class="btn btn-default btn-lg btn-round" who="0">娟</button>
+        <div id="recordDiv">
+            <div class="container" id="fakeContainer">
+                <h3 class="text-center">
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+                    Find Yourself~
+                </h3>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <button type="button" class="btn btn-default btn-lg btn-round" who="0">娟</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3"></div>
+                    <div class="col-xs-4">
+                        <button type="button" class="btn btn-default btn-lg btn-round" who="1">洁</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-6">
+                        <p class="billEnter">
+                            <a id="queryBill">个人查账入口</a>
+                        </p>
+                        <p class="billEnter">
+                            <a id="calBill">月初算账入口</a>
+                        </p>
+                    </div>
+                    <div class="col-xs-4">
+                        <button type="button" class="btn btn-default btn-lg btn-round" who="2">瓜</button>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-3"></div>
-                <div class="col-xs-4">
-                    <button type="button" class="btn btn-default btn-lg btn-round" who="1">洁</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <p class="billEnter">
-                        <a id="queryBill" href="/query">个人查账入口</a>
-                    </p>
-                    <p class="billEnter">
-                        <a id="calBill">月初算账入口</a>
-                    </p>
-                </div>
-                <div class="col-xs-4">
-                    <button type="button" class="btn btn-default btn-lg btn-round" who="2">瓜</button>
-                </div>
-            </div>
-        </div>
-        <div class="container" id="realContainer">
-            <h3 class="text-center">
-                Write it down~
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </h3>
-            <div class="row">
-                <div class="col-xs-1"></div>
-                <div class="col-xs-10">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">这是一笔投资.</div>
-                        <div class="panel-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="formWho">投资人</label>
-                                    <input type="text" class="form-control input" readonly id="formWho">
-                                </div>
-                                <div class="form-group">
-                                    <label for="formWhich">投资方向</label>
-                                    <select class="form-control input" id="formWhich">
-                                        <option value="0">蔬菜水果小吃</option>
-                                        <option value="1">柴米油盐酱醋茶</option>
-                                        <option value="2">酒水饮料</option>
-                                        <option value="3">生活用品</option>
-                                        <option value="4">水电暖</option>
-                                        <option value="5">娱乐</option>
-                                        <option value="6">其他</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="formCost">投资额</label>
-                                    <div class="input-group">
-                                        <div class="input-group-addon">￥</div>
-                                        <input type="number" class="form-control input" id="formCost" placeholder="0.00">
+            <div class="container" id="realContainer">
+                <h3 class="text-center">
+                    Write it down~
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </h3>
+                <div class="row">
+                    <div class="col-xs-1"></div>
+                    <div class="col-xs-10">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">这是一笔投资.</div>
+                            <div class="panel-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="formWho">投资人</label>
+                                        <input type="text" class="form-control input" readonly id="formWho">
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="formShare">受益人</label>
-                                    <select multiple class="form-control input" id="formShare">
-                                        <option value="0" selected> 洁</option>
-                                        <option value="1" selected> 斌哥</option>
-                                        <option value="2" selected> 小暖瓶</option>
-                                        <option value="3" selected> 阿瓜</option>
-                                        <option value="4" selected> 哈密瓜</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="formNote">备注</label>
-                                    <textarea class="form-control" rows="3" id="formNote" placeholder="要不写个明细?.."></textarea>
-                                </div>
-                                <button type="button" class="btn btn-default center-block small-round"></button>
-                            </form>
-                        </div>
-                        <div class="panel-footer footer-small text-muted">
-                            哈密瓜感谢你为这个小家做出的点滴奉献~
+                                    <div class="form-group">
+                                        <label for="formWhich">投资方向</label>
+                                        <select class="form-control input" id="formWhich">
+                                            <option value="0">蔬菜水果小吃</option>
+                                            <option value="1">柴米油盐酱醋茶</option>
+                                            <option value="2">酒水饮料</option>
+                                            <option value="3">生活用品</option>
+                                            <option value="4">水电暖</option>
+                                            <option value="5">娱乐</option>
+                                            <option value="6">其他</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formCost">投资额</label>
+                                        <div class="input-group">
+                                            <div class="input-group-addon">￥</div>
+                                            <input type="number" class="form-control input" id="formCost" placeholder="0.00">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formShare">受益人</label>
+                                        <select multiple class="form-control input" id="formShare">
+                                            <option value="0" selected> 洁</option>
+                                            <option value="1" selected> 斌哥</option>
+                                            <option value="2" selected> 小暖瓶</option>
+                                            <option value="3" selected> 阿瓜</option>
+                                            <option value="4" selected> 哈密瓜</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formNote">备注</label>
+                                        <textarea class="form-control" rows="3" id="formNote" placeholder="要不写个明细?.."></textarea>
+                                    </div>
+                                    <button type="button" class="btn btn-default center-block small-round"></button>
+                                </form>
+                            </div>
+                            <div class="panel-footer footer-small text-muted">
+                                哈密瓜感谢你为这个小家做出的点滴奉献~
+                            </div>
                         </div>
                     </div>
+                    <div class="col-xs-1"></div>
                 </div>
-                <div class="col-xs-1"></div>
             </div>
-        </div>
-        <div class="container" id="thanksContainer">
-            <div class="row">
-                <div class="col-xs-1"></div>
-                <div class="col-xs-10">
-                    <div class="alert alert-success" role="alert" id="thanksDiv">
-                        <strong><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>&nbsp;成功消费&nbsp;</strong><hr>
-                        <p></p>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">消费账单.</div>
-                        <div class="panel-body">
-                            <ul class="list-unstyled">
-                                <li>
-                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                </li>
-                                <li>
-                                    <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                                </li>
-                                <li>
-                                    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
-                                </li>
-                                <li>
-                                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                                </li>
-                            </ul>
+            <div class="container" id="thanksContainer">
+                <div class="row">
+                    <div class="col-xs-1"></div>
+                    <div class="col-xs-10">
+                        <div class="alert alert-success" role="alert" id="thanksDiv">
+                            <strong><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>&nbsp;成功消费&nbsp;</strong><hr>
+                            <p></p>
                         </div>
-                        <table class="table" id="billTable">
-                            <thead>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">消费账单.</div>
+                            <div class="panel-body">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                                    </li>
+                                    <li>
+                                        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+                                    </li>
+                                    <li>
+                                        <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                                    </li>
+                                    <li>
+                                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <table class="table" id="billTable">
+                                <thead>
                                 <th></th>
                                 <th>受益(元)</th>
                                 <th>支出(元)</th>
-                            </thead>
-                            <tbody>
+                                </thead>
+                                <tbody>
                                 <tr>
                                     <th>林洁</th>
                                     <td>0</td>
@@ -158,15 +160,63 @@
                                     <td>0</td>
                                     <td>0</td>
                                 </tr>
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
+                    <div class="col-xs-1"></div>
                 </div>
-                <div class="col-xs-1"></div>
             </div>
         </div>
+        <div class="container" id="queryDiv">
+            <a class="back pull-left">返回</a>
+            <h3 class="text-center">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                Query.
+            </h3>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="queryWho" class="col-xs-2 control-label">债主</label>
+                    <div class="col-xs-10">
+                        <select class="form-control" id="queryWho">
+                            <option value="0" selected="selected">刘娟</option>
+                            <option value="1">林洁</option>
+                            <option value="2">林欢</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="startTime" class="col-xs-2 control-label">始于</label>
+                    <div class="col-xs-10">
+                        <input type="date" class="form-control" id="startTime">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="endTime" class="col-xs-2 control-label">止于</label>
+                    <div class="col-xs-10">
+                        <input type="date" class="form-control" id="endTime">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="center-div">
+                        <button type="button" id="queryButton" class="btn btn-lg btn-primary">
+                            <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> 查账！
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <hr/>
+            <div>
+                <p>Result <span class="badge" id="billsNum">0</span></p>
+                <div id="resultsDiv">
+
+                </div>
+            </div>
+        </div>
+
     <script src="javascripts/jquery-2.0.3.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
     <script src="javascripts/bill.js"></script>
+    <script src="javascripts/query-bill.js"></script>
     </body>
 </html>
